Fix scroll wheel behavior when using Qt 5.7 or later

BUG:364850